--- a/templates/aqi-map.html
+++ b/templates/aqi-map.html
@@ -14,6 +14,7 @@
         }
         .container {
             max-width: 1400px;
+            width: 100%;
             margin: 0 auto;
             background: white;
             border-radius: 20px;
