--- a/templates/index.html
+++ b/templates/index.html
@@ -242,12 +242,7 @@
                         <div class="detail-value" id="pressure">--</div>
                     </div>
                     <div class="detail-item">
-                        <div class="detail-icon">👁️</div>
-                        <div class="detail-label">Visibility</div>
-                        <div class="detail-value" id="visibility">--</div>
-                    </div>
-                    <div class="detail-item">
-                        <div class="detail-icon">💦</div>
+                        <div class="detail-icon"></div>
                         <div class="detail-label">Dew Point</div>
                         <div class="detail-value" id="dewPoint">--</div>
                     </div>
