--- a/templates/live-location.html
+++ b/templates/live-location.html
@@ -20,6 +20,7 @@
         }
         .container {
             max-width: 600px;
+            width: 100%;
             margin: 0 auto;
             background: white;
             border-radius: 20px;
